# nice_tts

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  REFACTOR_REPORT.md  install-gpu.py  pyproject.toml  simple_gpu_check.py  simple_validation.py  test_gpu.py  validate_refactor.py
.claude/: index.json
.qoder/quests/: project-refactoring.md  unknown-task.md
nice-tts/: .gitignore  README.md  example.fine.txt  example.srt  pyproject.toml
nice-tts/src/nice_tts/: llm.py  main.py  transcription.py
src/nice_tts/: CLAUDE.md  __init__.py  __main__.py  llm.py  main.py  transcription.py
src/nice_tts/cli/: __init__.py  commands.py  config_commands.py  validators.py
src/nice_tts/core/: __init__.py  config.py  exceptions.py  pipeline.py
src/nice_tts/engines/: __init__.py
src/nice_tts/engines/llm/: __init__.py  base.py  claude_provider.py  ollama_provider.py  openai_provider.py
src/nice_tts/engines/transcription/: __init__.py  base.py  whisper.py
src/nice_tts/llm/: CLAUDE.md
src/nice_tts/transcription/: CLAUDE.md
src/nice_tts/utils/: __init__.py  file_manager.py  logger.py  m4a_preprocessor.py  m4a_validator.py
tests/: __init__.py
tests/unit/: test_config.py  test_file_manager.py  test_transcription.py
