[project]
name = "nice-tts"
version = "0.2.0"
description = "A CLI tool to transcribe, refine, and summarize audio files using AI."
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "openai",
    "python-dotenv",
    "typer[all]",
    "openai-whisper",
    "torch",
    "torchvision", 
    "torchaudio",
    "transformers",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
nice-tts = "nice_tts.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nice_tts"]
